--- a/src/main/mainwindow.ui
+++ b/src/main/mainwindow.ui
@@ -41,6 +41,9 @@
          <property name="text">
           <string>Test</string>
          </property>
+         <property name="default">
+          <bool>true</bool>
+         </property>
         </widget>
        </item>
        <item>
