--- a/src/main/testdialog.ui
+++ b/src/main/testdialog.ui
@@ -994,7 +994,7 @@
              </property>
             </widget>
            </item>
-           <item row="19" column="0">
+           <item row="20" column="0">
             <widget class="QLabel" name="setCellSelectedLabel">
              <property name="text">
               <string>setCellSelected</string>
@@ -1060,7 +1060,7 @@
              </property>
             </widget>
            </item>
-           <item row="19" column="2">
+           <item row="20" column="2">
             <widget class="QLabel" name="setCellSelectedResLabel">
              <property name="sizePolicy">
               <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
@@ -1116,7 +1116,7 @@
              </property>
             </widget>
            </item>
-           <item row="21" column="2">
+           <item row="22" column="2">
             <widget class="QLabel" name="setColumnWidthResLabel">
              <property name="sizePolicy">
               <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
@@ -1172,7 +1172,7 @@
              </property>
             </widget>
            </item>
-           <item row="20" column="2">
+           <item row="21" column="2">
             <widget class="QLabel" name="setRowHeightResLabel">
              <property name="sizePolicy">
               <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
@@ -1228,7 +1228,7 @@
              </property>
             </widget>
            </item>
-           <item row="20" column="0">
+           <item row="21" column="0">
             <widget class="QLabel" name="setRowHeightLabel">
              <property name="text">
               <string>setRowHeight</string>
@@ -1238,7 +1238,7 @@
              </property>
             </widget>
            </item>
-           <item row="21" column="0">
+           <item row="22" column="0">
             <widget class="QLabel" name="setColumnWidthLabel">
              <property name="text">
               <string>setColumnWidth</string>
@@ -1458,6 +1458,72 @@
            </item>
            <item row="9" column="2">
             <widget class="QLabel" name="setGridColorResLabel">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="palette">
+              <palette>
+               <active>
+                <colorrole role="WindowText">
+                 <brush brushstyle="SolidPattern">
+                  <color alpha="255">
+                   <red>0</red>
+                   <green>0</green>
+                   <blue>255</blue>
+                  </color>
+                 </brush>
+                </colorrole>
+               </active>
+               <inactive>
+                <colorrole role="WindowText">
+                 <brush brushstyle="SolidPattern">
+                  <color alpha="255">
+                   <red>0</red>
+                   <green>0</green>
+                   <blue>255</blue>
+                  </color>
+                 </brush>
+                </colorrole>
+               </inactive>
+               <disabled>
+                <colorrole role="WindowText">
+                 <brush brushstyle="SolidPattern">
+                  <color alpha="255">
+                   <red>120</red>
+                   <green>120</green>
+                   <blue>120</blue>
+                  </color>
+                 </brush>
+                </colorrole>
+               </disabled>
+              </palette>
+             </property>
+             <property name="font">
+              <font>
+               <weight>75</weight>
+               <bold>true</bold>
+              </font>
+             </property>
+             <property name="text">
+              <string>IN PROGRESS</string>
+             </property>
+            </widget>
+           </item>
+           <item row="19" column="0">
+            <widget class="QLabel" name="setCellTextFlagsLabel">
+             <property name="text">
+              <string>setCellTextFlags</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+             </property>
+            </widget>
+           </item>
+           <item row="19" column="2">
+            <widget class="QLabel" name="setCellTextFlagsResLabel">
              <property name="sizePolicy">
               <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
                <horstretch>0</horstretch>
