--- a/src/main/mainwindow.ui
+++ b/src/main/mainwindow.ui
@@ -47,6 +47,13 @@
         </widget>
        </item>
        <item>
+        <widget class="QPushButton" name="controllerButton">
+         <property name="text">
+          <string>Controller</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <spacer name="horizontalSpacer">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
