New button in controller: Clear

--- a/src/controller/controllerdialog.ui
+++ b/src/controller/controllerdialog.ui
@@ -96,7 +96,14 @@
           </widget>
          </item>
          <item row="0" column="1">
-          <widget class="QSpinBox" name="rowCountSpinBox"/>
+          <widget class="QSpinBox" name="rowCountSpinBox">
+           <property name="minimum">
+            <number>-1</number>
+           </property>
+           <property name="maximum">
+            <number>1000000</number>
+           </property>
+          </widget>
          </item>
          <item row="1" column="0">
           <widget class="QLabel" name="columnCountLabel">
@@ -156,13 +163,34 @@
           </widget>
          </item>
          <item row="1" column="1">
-          <widget class="QSpinBox" name="columnCountSpinBox"/>
+          <widget class="QSpinBox" name="columnCountSpinBox">
+           <property name="minimum">
+            <number>-1</number>
+           </property>
+           <property name="maximum">
+            <number>1000000</number>
+           </property>
+          </widget>
          </item>
          <item row="2" column="1">
-          <widget class="QSpinBox" name="horizontalHeaderRowCountSpinBox"/>
+          <widget class="QSpinBox" name="horizontalHeaderRowCountSpinBox">
+           <property name="minimum">
+            <number>-1</number>
+           </property>
+           <property name="maximum">
+            <number>1000000</number>
+           </property>
+          </widget>
          </item>
          <item row="3" column="1">
-          <widget class="QSpinBox" name="verticalHeaderColumnCountSpinBox"/>
+          <widget class="QSpinBox" name="verticalHeaderColumnCountSpinBox">
+           <property name="minimum">
+            <number>-1</number>
+           </property>
+           <property name="maximum">
+            <number>1000000</number>
+           </property>
+          </widget>
          </item>
          <item row="0" column="2">
           <widget class="QPushButton" name="rowCountButton">
@@ -245,6 +273,13 @@
           </widget>
          </item>
         </layout>
+       </item>
+       <item>
+        <widget class="QPushButton" name="clearButton">
+         <property name="text">
+          <string>Clear</string>
+         </property>
+        </widget>
        </item>
        <item>
         <spacer name="verticalSpacer">
